--- a/.gitignore
+++ b/.gitignore
@@ -33,13 +33,13 @@ coco2014
 ImageCap/Qwen3
 ImageCap/swinTransformer
 ImageCap/gpt2zh
-
+VLM
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
-
+*.json
 # 系统
 .DS_Store
 Thumbs.db
